# filtered-vector-bench

./: .gitignore  FAIRNESS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: smoke.yml
configs/: backend-matrix.yaml  backends-transport-smoke.yaml  cap-probe.yaml  default.yaml  fts-probe.yaml  fts-selectivity.yaml  fts-steady-1m.yaml  full.yaml  smoke.yaml  steady-matrix.yaml  steady-smoke.yaml  transport-matrix.yaml
docker/: docker-compose.yml
docs/sample-results/: summary.md
fvb/: __init__.py  config.py  data.py  ground_truth.py  memsample.py  report.py  runner.py
fvb/engines/: __init__.py  base.py  postgres.py  surrealdb.py
scripts/: report.py  run.py
tests/: test_regressions.py
